--- a/dev-util/devel-chroots/ChangeLog
+++ b/dev-util/devel-chroots/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/devel-chroots
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/devel-chroots/ChangeLog,v 1.31 2007/12/29 18:11:30 pappy Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/devel-chroots/ChangeLog,v 1.32 2008/05/29 06:04:52 phreak Exp $
+
+  29 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Alexander Gabert (pappy) from metadata.xml (as per #74378).
+  Assigning to maintainer-needed.
 
   29 Dec 2007; Alexander Gabert <pappy@gentoo.org>
   devel-chroots-2.1.0.ebuild:
