--- a/net-libs/libfwbuilder/ChangeLog
+++ b/net-libs/libfwbuilder/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libfwbuilder
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libfwbuilder/ChangeLog,v 1.70 2007/09/29 23:02:52 r3pek Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libfwbuilder/ChangeLog,v 1.71 2008/05/29 07:22:48 phreak Exp $
+
+  29 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Carlos Silva (r3pek) from metadata.xml (as per #80351). Assigning
+  to maintainer-needed.
 
 *libfwbuilder-2.1.14 (29 Sep 2007)
 
