--- a/sys-apps/lkcp/ChangeLog
+++ b/sys-apps/lkcp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/lkcp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lkcp/ChangeLog,v 1.15 2007/06/25 17:03:50 peper Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lkcp/ChangeLog,v 1.16 2008/05/29 07:23:32 phreak Exp $
+
+  29 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing Carlos Silva (r3pek) from metadata.xml (as per #80351). Assigning
+  to maintainer-needed.
 
   25 Jun 2007; Piotr Jaroszyński <peper@gentoo.org> lkcp-0.5.4.ebuild:
   (QA) Fix deps. bug #151030.
