--- a/app-office/openoffice/ChangeLog
+++ b/app-office/openoffice/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/openoffice
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.397 2008/05/27 21:08:18 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.398 2008/05/29 09:50:33 suka Exp $
+
+  29 May 2008; Andreas Proschofsky <suka@gentoo.org>
+  openoffice-2.4.1_rc1.ebuild:
+  Fixup download of l10n-package in OOo 2.4.1_rc1
 
 *openoffice-2.4.1_rc1 (27 May 2008)
 
