--- a/net-misc/nx/ChangeLog
+++ b/net-misc/nx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/nx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.20 2008/05/28 09:23:09 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.21 2008/05/29 10:31:19 opfer Exp $
+
+  29 May 2008; Christian Faulhammer <opfer@gentoo.org> nx-3.2.0.ebuild:
+  x86 stable, bug #222967
 
 *nx-3.2.0-r1 (28 May 2008)
 
