--- a/net-misc/nx/ChangeLog
+++ b/net-misc/nx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/nx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.23 2008/05/29 10:32:35 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nx/ChangeLog,v 1.24 2008/05/29 10:33:11 opfer Exp $
+
+  29 May 2008; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
+  x86 stable, bug #222967
 
   29 May 2008; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
   x86 stable, bug #222967
