--- a/x11-misc/gaia/ChangeLog
+++ b/x11-misc/gaia/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/gaia
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gaia/ChangeLog,v 1.18 2008/05/11 18:57:35 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gaia/ChangeLog,v 1.19 2008/05/29 12:06:18 opfer Exp $
+
+  29 May 2008; Christian Faulhammer <opfer@gentoo.org>
+  +files/gaia-0.1.2-scons-0.98.patch, gaia-0.1.2.ebuild:
+  fix compatability with scons >=0.98.3 as reported by coldwind in bug 223997
 
   11 May 2008; Christian Faulhammer <opfer@gentoo.org> gaia-0.1.2.ebuild:
   put doxygen in build-time dependency as reported on bug 221701 by flameeyes
