--- a/app-office/oooqs/ChangeLog
+++ b/app-office/oooqs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/oooqs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/oooqs/ChangeLog,v 1.32 2008/02/26 03:20:51 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/oooqs/ChangeLog,v 1.33 2008/05/29 12:35:56 suka Exp $
+
+  29 May 2008; Andreas Proschofsky <suka@gentoo.org> oooqs-2.1.0.ebuild,
+  oooqs-2.1.0.1.ebuild:
+  Fix berlios mirror, see bug #218657
 
   26 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> oooqs-2.1.0.ebuild,
   oooqs-2.1.0.1.ebuild:
