--- a/kde-base/mpeglib/ChangeLog
+++ b/kde-base/mpeglib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/mpeglib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/mpeglib/ChangeLog,v 1.61 2008/05/16 06:48:47 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/mpeglib/ChangeLog,v 1.62 2008/05/29 14:07:22 opfer Exp $
+
+  29 May 2008; Christian Faulhammer <opfer@gentoo.org> mpeglib-3.5.9.ebuild:
+  stable x86, bug 221063
 
   16 May 2008; Markus Rothe <corsair@gentoo.org> mpeglib-3.5.9.ebuild:
   Stable on ppc64; bug #221063
