--- a/app-editors/medit/ChangeLog
+++ b/app-editors/medit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/medit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/medit/ChangeLog,v 1.2 2008/03/26 15:54:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/medit/ChangeLog,v 1.3 2008/05/29 15:36:36 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org> medit-0.9.2.ebuild:
+  python_mod_optimize is ROOT aware.
 
   26 Mar 2008; Raúl Porcel <armin76@gentoo.org> medit-0.9.2.ebuild:
   Add ~x86
