--- a/app-editors/scribes/ChangeLog
+++ b/app-editors/scribes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/scribes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/scribes/ChangeLog,v 1.3 2008/01/23 14:22:51 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/scribes/ChangeLog,v 1.4 2008/05/29 15:37:32 hawking Exp $
+
+  29 May 2008; Ali Polatel <hawking@gentoo.org> scribes-0.3.3.3.ebuild:
+  python_mod_optimize is ROOT aware.
 
   23 Jan 2008; Samuli Suominen <drac@gentoo.org> scribes-0.3.3.3.ebuild:
   Pass --disable-scrollkeeper in pkg_setup.
