--- a/dev-php5/xcache/ChangeLog
+++ b/dev-php5/xcache/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/xcache
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/xcache/ChangeLog,v 1.15 2008/03/08 19:42:07 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/xcache/ChangeLog,v 1.16 2008/06/03 03:26:27 chtekk Exp $
+
+  03 Jun 2008; Luca Longinotti <chtekk@gentoo.org> -xcache-1.2.1.ebuild:
+  Remove old.
 
   08 Mar 2008; <pva@gentoo.org> xcache-1.2.2.ebuild:
   amd64 stable.
