--- a/dev-php5/xdebug/ChangeLog
+++ b/dev-php5/xdebug/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-php5/xdebug
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/ChangeLog,v 1.21 2008/03/08 22:16:57 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/xdebug/ChangeLog,v 1.22 2008/06/03 03:33:55 chtekk Exp $
+
+*xdebug-2.0.3 (03 Jun 2008)
+
+  03 Jun 2008; Luca Longinotti <chtekk@gentoo.org> +xdebug-2.0.3.ebuild:
+  Version bump.
 
   08 Mar 2008; <pva@gentoo.org> xdebug-2.0.2.ebuild:
   amd64 stable, bug #208848.
