--- a/dev-scheme/drscheme/ChangeLog
+++ b/dev-scheme/drscheme/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-scheme/drscheme
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/drscheme/ChangeLog,v 1.58 2008/03/23 11:51:43 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/drscheme/ChangeLog,v 1.59 2008/06/03 10:19:12 dev-zero Exp $
+
+  03 Jun 2008; Tiziano Müller <dev-zero@gentoo.org>
+  +files/drscheme-372-as_needed.patch, drscheme-372-r1.ebuild:
+  Fixed compilation problems with --as-needed (bug #178661)
 
 *drscheme-372-r1 (23 Mar 2008)
 
