--- a/xfce-extra/xfburn/ChangeLog
+++ b/xfce-extra/xfburn/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for xfce-extra/xfburn
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfburn/ChangeLog,v 1.9 2008/03/21 07:36:46 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfburn/ChangeLog,v 1.10 2008/06/03 12:19:39 angelos Exp $
+
+*xfburn-0.3.0 (03 Jun 2008)
+
+  03 Jun 2008; Christoph Mende <angelos@gentoo.org> +xfburn-0.3.0.ebuild:
+  Version bump
 
 *xfburn-0.3.0_pre20080321 (21 Mar 2008)
 
