--- a/media-video/cinelerra-cvs/ChangeLog
+++ b/media-video/cinelerra-cvs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-video/cinelerra-cvs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/cinelerra-cvs/ChangeLog,v 1.44 2008/04/10 21:22:13 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/cinelerra-cvs/ChangeLog,v 1.45 2008/06/03 13:31:17 hanno Exp $
+
+*cinelerra-cvs-20080602 (03 Jun 2008)
+
+  03 Jun 2008; Hanno Boeck <hanno@gentoo.org>
+  +cinelerra-cvs-20080602.ebuild:
+  Version bump, some patches got accepted upstream.
 
   10 Apr 2008; Alexis Ballier <aballier@gentoo.org>
   -cinelerra-cvs-20080301.ebuild:
