--- a/media-sound/squeezecenter/ChangeLog
+++ b/media-sound/squeezecenter/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/squeezecenter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.17 2008/05/26 00:18:36 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.18 2008/06/03 21:22:02 lavajoe Exp $
+
+*squeezecenter-7.0.2_beta20080530 (03 Jun 2008)
+
+  03 Jun 2008; Joe Peterson <lavajoe@gentoo.org>
+  files/filepaths-7.0.2-gentoo.patch, files/squeezecenter-7.0.2.init.d,
+  -squeezecenter-7.0.1_beta20080501.ebuild,
+  -squeezecenter-7.0.2_beta20080524.ebuild,
+  +squeezecenter-7.0.2_beta20080530.ebuild:
+  Add 7.0.2 beta nightly for 2008-05-30; Remove old versions
 
 *squeezecenter-7.0.2_beta20080524 (26 May 2008)
 
