--- a/dev-cpp/libthrowable/ChangeLog
+++ b/dev-cpp/libthrowable/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/libthrowable
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libthrowable/ChangeLog,v 1.12 2008/05/03 18:57:04 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libthrowable/ChangeLog,v 1.13 2008/06/04 01:54:36 jer Exp $
+
+  04 Jun 2008; Jeroen Roovers <jer@gentoo.org> libthrowable-1.1.0.ebuild:
+  Marked ~hppa too (app-portage/gatt).
 
   03 May 2008; Hanno Boeck <hanno@gentoo.org>
   +files/libthrowable-1.1.0-gcc43.diff, libthrowable-1.1.0.ebuild:
