--- a/app-portage/gatt/ChangeLog
+++ b/app-portage/gatt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/gatt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.8 2008/05/09 20:17:33 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.9 2008/06/04 01:56:50 jer Exp $
+
+  04 Jun 2008; Jeroen Roovers <jer@gentoo.org> gatt-0.6.0.ebuild:
+  Marked ~hppa too.
 
   09 May 2008; Christian Faulhammer <opfer@gentoo.org>
   +files/gatt-0.6.0_gcc-4.3.patch, gatt-0.6.0.ebuild:
