--- a/net-analyzer/nagios-nrpe/ChangeLog
+++ b/net-analyzer/nagios-nrpe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/nagios-nrpe
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.52 2008/06/01 17:35:55 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.53 2008/06/04 07:30:16 corsair Exp $
+
+  04 Jun 2008; Markus Rothe <corsair@gentoo.org> nagios-nrpe-2.12.ebuild:
+  Stable on ppc64; bug #224019
 
   01 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
   nagios-nrpe-2.12.ebuild:
