--- a/media-libs/SoGtk/ChangeLog
+++ b/media-libs/SoGtk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/SoGtk
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/SoGtk/ChangeLog,v 1.14 2008/04/21 17:37:01 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/SoGtk/ChangeLog,v 1.15 2008/06/04 17:24:30 flameeyes Exp $
+
+  04 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
+  SoGtk-20010601-r1.ebuild:
+  Use eautoreconf, not the bootstrap script.
 
   21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Fix up metadata.xml. If there's no maintainer for the package, the metadata
