--- a/net-dialup/eagle-usb/ChangeLog
+++ b/net-dialup/eagle-usb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/eagle-usb
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/eagle-usb/ChangeLog,v 1.12 2007/10/28 13:28:59 phreak Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/eagle-usb/ChangeLog,v 1.13 2008/06/04 18:32:10 flameeyes Exp $
+
+  04 Jun 2008; Diego Pettenò <flameeyes@gentoo.org> eagle-usb-2.3.3.ebuild:
+  Use eautoreconf, not the bootstrap script.
 
   28 Oct 2007; Christian Heim <phreak@gentoo.org> eagle-usb-2.3.3.ebuild:
   Include virtual/logger in RDEPEND, as the initscript already specifies 'need
