--- a/media-video/nvclock/ChangeLog
+++ b/media-video/nvclock/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/nvclock
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvclock/ChangeLog,v 1.24 2008/04/21 17:45:30 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvclock/ChangeLog,v 1.25 2008/06/04 18:36:44 flameeyes Exp $
+
+  04 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
+  nvclock-0.8_beta2.ebuild:
+  Use eautoreconf, not the bootstrap script.
 
   21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Fix up metadata.xml. If there's no maintainer for the package, the metadata
