--- a/media-libs/glitz/ChangeLog
+++ b/media-libs/glitz/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/glitz
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/glitz/ChangeLog,v 1.32 2008/01/15 18:51:04 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/glitz/ChangeLog,v 1.33 2008/06/04 18:58:57 cardoe Exp $
+
+  04 Jun 2008; Doug Goldstein <cardoe@gentoo.org>
+  -files/glitz-0.2.3-link.patch, -glitz-0.2.3.ebuild,
+  -glitz-0.3.0.20050115.ebuild, -glitz-0.4.0.ebuild, -glitz-0.4.4.ebuild,
+  -glitz-0.5.3.ebuild:
+  nuke old versions
 
   15 Jan 2008; Fabian Groffen <grobian@gentoo.org> glitz-0.4.4.ebuild,
   glitz-0.5.3.ebuild, glitz-0.5.6.ebuild:
