--- a/media-video/y4mscaler/ChangeLog
+++ b/media-video/y4mscaler/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/y4mscaler
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/y4mscaler/ChangeLog,v 1.6 2007/07/28 16:44:25 angelos Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/y4mscaler/ChangeLog,v 1.7 2008/06/04 22:20:11 aballier Exp $
+
+  04 Jun 2008; Alexis Ballier <aballier@gentoo.org> y4mscaler-9.0.ebuild:
+  add empty IUSE, thanks to Marek Miller <mlm@shells.pl>, bug #224371
 
   28 Jul 2007; Christoph Mende <angelos@gentoo.org> y4mscaler-9.0.ebuild:
   Stable on amd64 wrt bug #185539
