--- a/media-sound/alsa-utils/ChangeLog
+++ b/media-sound/alsa-utils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.239 2008/05/15 22:05:59 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.240 2008/06/05 07:40:44 armin76 Exp $
+
+  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> ChangeLog:
+  ia64 stable
 
   15 May 2008; Steve Dibb <beandog@gentoo.org> files/alsasound.confd:
   Clarify KILLPROC use on configuration
