--- a/app-cdr/serpentine/ChangeLog
+++ b/app-cdr/serpentine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/serpentine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/serpentine/ChangeLog,v 1.15 2008/06/04 18:56:14 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/serpentine/ChangeLog,v 1.16 2008/06/05 08:34:55 opfer Exp $
+
+  05 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
+  serpentine-0.9.ebuild:
+  stable x86, bug 218112
 
   04 Jun 2008; Samuli Suominen <drac@gentoo.org> serpentine-0.9.ebuild:
   Fix test suite. Move use_enable inside function.
