--- a/www-client/mozilla-firefox-bin/ChangeLog
+++ b/www-client/mozilla-firefox-bin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-client/mozilla-firefox-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.139 2008/05/21 14:25:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.140 2008/06/05 10:03:03 armin76 Exp $
+
+*mozilla-firefox-bin-3.0_rc2 (05 Jun 2008)
+
+  05 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-firefox-bin-3.0_rc2.ebuild:
+  Version bump
 
   21 May 2008; Raúl Porcel <armin76@gentoo.org>
   mozilla-firefox-bin-3.0_rc1.ebuild:
