--- a/gnome-base/gnome-volume-manager/ChangeLog
+++ b/gnome-base/gnome-volume-manager/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-volume-manager
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-volume-manager/ChangeLog,v 1.105 2008/05/25 19:44:32 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-volume-manager/ChangeLog,v 1.106 2008/06/05 11:55:09 remi Exp $
+
+  05 Jun 2008; Rémi Cardona <remi@gentoo.org>
+  gnome-volume-manager-2.17.0.ebuild, gnome-volume-manager-2.17.0-r1.ebuild:
+  pkgmove to gnome-base/gnome-control-center
 
 *gnome-volume-manager-2.22.5 (25 May 2008)
 
