--- a/net-voip/cohoba/ChangeLog
+++ b/net-voip/cohoba/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/cohoba
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/cohoba/ChangeLog,v 1.6 2006/11/20 18:06:50 peper Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-voip/cohoba/ChangeLog,v 1.7 2008/06/05 11:57:38 remi Exp $
+
+  05 Jun 2008; Rémi Cardona <remi@gentoo.org> cohoba-0.0.4.ebuild:
+  pkgmove to gnome-base/gnome-control-center
 
   20 Nov 2006; Piotr Jaroszyński <peper@gentoo.org> cohoba-0.0.4.ebuild:
   Fix dbus dep wrt bug #154521.
