--- a/x11-wm/heliodor/ChangeLog
+++ b/x11-wm/heliodor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/heliodor
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/heliodor/ChangeLog,v 1.5 2008/02/08 00:15:43 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/heliodor/ChangeLog,v 1.6 2008/06/05 11:59:14 remi Exp $
+
+  05 Jun 2008; Rémi Cardona <remi@gentoo.org> heliodor-0.1.3.ebuild,
+  heliodor-0.1.4.ebuild, heliodor-0.2.1.ebuild:
+  pkgmove to gnome-base/gnome-control-center
 
   08 Feb 2008; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
   Maintainer email was non-existent in bugzilla.
