--- a/x11-misc/mkxf86config/ChangeLog
+++ b/x11-misc/mkxf86config/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/mkxf86config
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/mkxf86config/ChangeLog,v 1.38 2008/06/05 17:34:10 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/mkxf86config/ChangeLog,v 1.39 2008/06/05 18:49:14 wolf31o2 Exp $
+
+  05 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  mkxf86config-0.9.10.ebuild:
+  Changing SRC_URI to point to wolf31o2.org, where I'll be doing any future
+  mkxf86config releases.
 
   05 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   -mkxf86config-0.9.1.ebuild, -mkxf86config-0.9.9.ebuild:
