--- a/net-analyzer/nagios-nrpe/ChangeLog
+++ b/net-analyzer/nagios-nrpe/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-nrpe
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.53 2008/06/04 07:30:16 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.54 2008/06/05 19:40:13 bluebird Exp $
+
+  05 Jun 2008; Friedrich Oslage <bluebird@gentoo.org>
+  nagios-nrpe-2.12.ebuild:
+  stable on sparc, bug 224019
 
   04 Jun 2008; Markus Rothe <corsair@gentoo.org> nagios-nrpe-2.12.ebuild:
   Stable on ppc64; bug #224019
