--- a/sys-apps/gli/ChangeLog
+++ b/sys-apps/gli/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/gli
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gli/ChangeLog,v 1.11 2008/02/01 18:04:28 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gli/ChangeLog,v 1.12 2008/06/05 20:11:17 wolf31o2 Exp $
+
+*gli-0.6.6 (05 Jun 2008)
+
+  05 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org> gli-0.4.2.ebuild,
+  gli-0.5.4.ebuild, -gli-0.6.2.ebuild, +gli-0.6.6.ebuild:
+  Version bump to 0.6.6 for 2008.0, remove 0.6.2, and clean up quoting.
 
 *gli-0.6.2 (01 Feb 2008)
 
