--- a/games-action/blobandconquer/ChangeLog
+++ b/games-action/blobandconquer/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-action/blobandconquer
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/blobandconquer/ChangeLog,v 1.6 2008/05/10 14:43:53 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/blobandconquer/ChangeLog,v 1.7 2008/06/05 21:05:37 mr_bones_ Exp $
+
+*blobandconquer-0.94 (05 Jun 2008)
+
+  05 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  +blobandconquer-0.94.ebuild:
+  version bump
 
 *blobandconquer-0.93 (10 May 2008)
 
