--- a/kde-base/kappfinder/ChangeLog
+++ b/kde-base/kappfinder/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kappfinder
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kappfinder/ChangeLog,v 1.92 2008/05/18 21:17:17 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kappfinder/ChangeLog,v 1.93 2008/06/05 21:06:08 keytoaster Exp $
+
+*kappfinder-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kappfinder-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kappfinder.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kappfinder-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
