--- a/kde-base/kbugbuster/ChangeLog
+++ b/kde-base/kbugbuster/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kbugbuster
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.80 2008/05/18 18:49:10 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kbugbuster/ChangeLog,v 1.81 2008/06/05 21:10:47 keytoaster Exp $
+
+*kbugbuster-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kbugbuster-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kbugbuster.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kbugbuster-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
