--- a/kde-base/kde-menu-icons/ChangeLog
+++ b/kde-base/kde-menu-icons/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kde-menu-icons
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-menu-icons/ChangeLog,v 1.7 2008/05/15 23:00:24 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kde-menu-icons/ChangeLog,v 1.8 2008/06/05 21:17:23 keytoaster Exp $
+
+*kde-menu-icons-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kde-menu-icons-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kde-menu-icons.
 
 *kde-menu-icons-4.0.4 (15 May 2008)
 
