--- a/kde-base/kdeaccessibility-colorschemes/ChangeLog
+++ b/kde-base/kdeaccessibility-colorschemes/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeaccessibility-colorschemes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-colorschemes/ChangeLog,v 1.8 2008/05/20 10:50:26 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccessibility-colorschemes/ChangeLog,v 1.9 2008/06/05 21:18:52 keytoaster Exp $
+
+*kdeaccessibility-colorschemes-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdeaccessibility-colorschemes-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdeaccessibility-colorschemes.
 
   20 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> Manifest:
   Manifest.
