--- a/kde-base/kdeaccounts-plugin/ChangeLog
+++ b/kde-base/kdeaccounts-plugin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeaccounts-plugin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccounts-plugin/ChangeLog,v 1.7 2008/05/15 23:03:58 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeaccounts-plugin/ChangeLog,v 1.8 2008/06/05 21:20:25 keytoaster Exp $
+
+*kdeaccounts-plugin-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdeaccounts-plugin-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdeaccounts-plugin.
 
 *kdeaccounts-plugin-4.0.4 (15 May 2008)
 
