--- a/kde-base/kdeartwork-icewm-themes/ChangeLog
+++ b/kde-base/kdeartwork-icewm-themes/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork-icewm-themes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-icewm-themes/ChangeLog,v 1.78 2008/05/18 21:00:54 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-icewm-themes/ChangeLog,v 1.79 2008/06/05 21:22:36 keytoaster Exp $
+
+*kdeartwork-icewm-themes-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdeartwork-icewm-themes-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdeartwork-icewm-themes.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdeartwork-icewm-themes-3.5.9.ebuild:
