--- a/dev-libs/gnome-build/ChangeLog
+++ b/dev-libs/gnome-build/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-libs/gnome-build
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/ChangeLog,v 1.12 2008/05/10 15:28:14 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/ChangeLog,v 1.13 2008/06/05 21:27:30 eva Exp $
+
+*gnome-build-0.3.0 (05 Jun 2008)
+
+  05 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-build-0.1.3.ebuild, -gnome-build-0.1.4.ebuild,
+  -gnome-build-0.2.0.ebuild, -gnome-build-0.2.1.ebuild,
+  +gnome-build-0.3.0.ebuild:
+  bump to 0.3.0. Clean up old revisions.
 
   10 May 2008; Raúl Porcel <armin76@gentoo.org> gnome-build-0.1.7.ebuild:
   sparc stable
