--- a/kde-base/kdemultimedia-kioslaves/ChangeLog
+++ b/kde-base/kdemultimedia-kioslaves/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdemultimedia-kioslaves
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.99 2008/05/18 19:16:47 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.100 2008/06/05 21:32:44 keytoaster Exp $
+
+*kdemultimedia-kioslaves-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdemultimedia-kioslaves-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdemultimedia-kioslaves.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdemultimedia-kioslaves-3.5.9.ebuild:
