--- a/kde-base/kdesdk-misc/ChangeLog
+++ b/kde-base/kdesdk-misc/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdesdk-misc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.61 2008/05/18 18:40:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.62 2008/06/05 21:37:06 keytoaster Exp $
+
+*kdesdk-misc-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdesdk-misc-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdesdk-misc.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdesdk-misc-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
