--- a/kde-base/kdesdk-scripts/ChangeLog
+++ b/kde-base/kdesdk-scripts/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdesdk-scripts
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-scripts/ChangeLog,v 1.74 2008/05/18 18:39:13 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-scripts/ChangeLog,v 1.75 2008/06/05 21:37:39 keytoaster Exp $
+
+*kdesdk-scripts-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdesdk-scripts-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdesdk-scripts.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kdesdk-scripts-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
