--- a/kde-base/kdnssd/ChangeLog
+++ b/kde-base/kdnssd/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdnssd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/ChangeLog,v 1.92 2008/05/30 08:58:03 zlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdnssd/ChangeLog,v 1.93 2008/06/05 21:42:38 keytoaster Exp $
+
+*kdnssd-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +kdnssd-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdnssd.
 
   30 May 2008; Bo Ørsted Andresen <zlin@gentoo.org> kdnssd-4.0.4.ebuild:
   KDE4_BUILT_WITH_USE_CHECK is now always an array. Bug #216863.
