--- a/kde-base/kmilo/ChangeLog
+++ b/kde-base/kmilo/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kmilo
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kmilo/ChangeLog,v 1.96 2008/05/18 15:53:37 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kmilo/ChangeLog,v 1.97 2008/06/05 21:59:16 keytoaster Exp $
+
+*kmilo-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +kmilo-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kmilo.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kmilo-3.5.9-r1.ebuild:
   amd64/x86 stable, bug #221063
