--- a/kde-base/kpercentage/ChangeLog
+++ b/kde-base/kpercentage/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kpercentage
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpercentage/ChangeLog,v 1.88 2008/05/18 17:17:02 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpercentage/ChangeLog,v 1.89 2008/06/05 22:11:36 keytoaster Exp $
+
+*kpercentage-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kpercentage-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kpercentage.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kpercentage-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
