--- a/kde-base/ksame/ChangeLog
+++ b/kde-base/ksame/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/ksame
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksame/ChangeLog,v 1.91 2008/05/18 19:57:30 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksame/ChangeLog,v 1.92 2008/06/05 22:16:35 keytoaster Exp $
+
+*ksame-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +ksame-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of ksame.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> ksame-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
