--- a/kde-base/ktip/ChangeLog
+++ b/kde-base/ktip/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/ktip
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ktip/ChangeLog,v 1.93 2008/05/18 17:30:08 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ktip/ChangeLog,v 1.94 2008/06/05 22:26:38 keytoaster Exp $
+
+*ktip-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +ktip-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of ktip.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> ktip-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
